@@ -26,9 +26,12 @@ bobcat (2.03.00)
   * insert and extraction operators (operator<<, operator>>) are now defined
     within the namespace FBB and no longer in the std namespace (except for 
     operator<< defined int msg/msg which is in std::)
+  * Added BigInt as the first (optionally added) class depending on OpenSSL.
+    The plan is to add more openssl-based classes in the (near) future. BigInt
+    wraps OpenSSL's unlimited precision number feature implemented by
+    OpenSSL's BN_ functions.
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 21 Jul 2009 14:32:55 +0200
-
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 22 Jul 2009 14:47:31 +0200
 
 bobcat (2.02.03)
 
